enhancement: fixed the shared header component to look decent on mobile

--- a/src/components/shared/header.module.css
+++ b/src/components/shared/header.module.css
@@ -37,5 +37,21 @@
 }
 
 .longBlueBar {
-  height: 120px;
+  height: 150px;
+}
+
+@media only screen and (max-width: 800px) {
+  .headerText {
+    font-size: 18px;
+    padding: 30px 0 10px 0;
+  }
+
+  .paragraphText {
+    font-size: 12px;
+  }
+
+  .blueBar {
+    height: 180px;
+    margin-top: 30px;
+  }
 }
